updated storage, index and cleaning css

--- a/css/style.css
+++ b/css/style.css
@@ -1235,11 +1235,11 @@ ol {
 }
 
 .footer__copyright__text i {
-    color: #00bfe7;
+    color: #6b034c;
 }
 
 .footer__copyright__text a {
-    color: #00bfe7;
+    color: #036b5d;
 }
 
 
