updated css for image and text

--- a/css/style.css
+++ b/css/style.css
@@ -1335,7 +1335,7 @@ ol {
     color: black;
     font-size: 14px;
     font-family: 'Open Sans', sans-serif;
-    text-align: justify;
+/*    text-align: justify;*/
 }
 
 .text__desc__p{
